# Lapua-RAG-v2.0

./: .env.bak  .gitignore  DEVELOPMENT.md  Dockerfile  KAYTTOOHJE_Lapuan_Kaupunki_RAG.md  LLM-inferenssi-groq-cloud  README.md  SELVITYS_Lapuan_Kaupunki_RAG_end_to_end.md  kysymykset.md  kysymykset_laajennettu.md  pyproject.toml
DATA_päättävät_elimet_20251202/: GPT-analyysi.txt
DATA_päättävät_elimet_20251202/rag_output/: tables_normalized.jsonl
DATA_päättävät_elimet_20251202/tmp/: lapua_paatoksenteko_analyysi_suunnitelma.md
apps/: __init__.py
apps/backend/: __init__.py  main.py
apps/frontend/: package-lock.json  (+1 more)
data/: answers_cache.json  companies_database.json  user_questions_log.json
evaluation_results/: baseline_20251205_enriched.json  baseline_fresh.json  baseline_fresh_enriched.json  baseline_gpt120_enriched.json  baseline_test_enriched.json  baseline_v2_enriched.json  eval_log.txt  expanded_full.json  expanded_full_enriched.json  expanded_test.json  full_250_run.json  full_250_run_enriched.json  optimized_run1.json  optimized_run1_enriched.json  optimized_v2.json  test_run.json
qdrant-storage/: raft_state.json
scripts/: auto_evaluate.py  compare_runs.py  enrich_companies.py  enrich_sources.py  evaluate_results.py  extract_entities.py  fetch_company_data.py  index_incremental.py  index_website_content.py  index_website_lite.py  populate_cache.py  run_evaluation.py  scrape_lapua_fi.py  scrape_simpsio.py  scrape_thermopolis.py  summary_results.py  test_groq.py  ytj_fetcher.py
tmp/: companies_raw.txt  evaluation_plan.md  extracted_entities.json
(+415 files in other folders)
